--- a/public/about.html
+++ b/public/about.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <title>About This</title>
-    <link rel="stylesheet" href="/dist/about.css" >
+    <link rel="stylesheet" href="/dist/about.min.css" >
 </head>
 <body>
     <div id="app"></div>
     <script src="http://cdn.jsdelivr.net/npm/vue@2.5.15/dist/vue.js"></script>
-    <script src="/dist/about.js"></script>
+    <script src="/dist/about.min.js"></script>
 </body>
 </html>
