--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <title>NSPack Demo For Vue</title>
-    <link rel="stylesheet" href="/dist/home.css" >
+    <link rel="stylesheet" href="/dist/home.min.css" >
 </head>
 <body>
     <div id="app"></div>
     <script src="http://cdn.jsdelivr.net/npm/vue@2.5.15/dist/vue.js"></script>
-    <script>var APP_DATA = {"testFiles":["es6-classes.vue","test-less-include-css.css","test-less.2.less","test-less.less","test-less.vue","use-requireJs-to-load-component.vue"]}</script><script src="/dist/home.js"></script>
+    <script>var APP_DATA = {"testFiles":["es6-classes.vue","test-less-include-css.css","test-less.2.less","test-less.less","test-less.vue","use-requireJs-to-load-component.vue"]}</script><script src="/dist/home.min.js"></script>
 </body>
 </html>
