--- a/public/tests/es6-classes.html
+++ b/public/tests/es6-classes.html
@@ -7,6 +7,6 @@
 <body>
     <div id="app"></div>
     <script src="http://cdn.jsdelivr.net/npm/vue@2.5.15/dist/vue.js"></script>
-    <script src="/dist/tests/es6-classes.js"></script>
+    <script src="/dist/tests/es6-classes.min.js"></script>
 </body>
 </html>
