--- a/public/tests/test-less.html
+++ b/public/tests/test-less.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <title>NSPack Demo For Vue</title>
-    <link rel="stylesheet" href="/dist/tests/test-less.css" >
+    <link rel="stylesheet" href="/dist/tests/test-less.min.css" >
 </head>
 <body>
     <div id="app"></div>
     <script src="http://cdn.jsdelivr.net/npm/vue@2.5.15/dist/vue.js"></script>
-    <script src="/dist/tests/test-less.js"></script>
+    <script src="/dist/tests/test-less.min.js"></script>
 </body>
 </html>
